--- a/spicetify/Themes/Dribbblish/color.ini
+++ b/spicetify/Themes/Dribbblish/color.ini
@@ -160,3 +160,21 @@ tab-active         = f1a84f
 notification       = c98430
 notification-error = e22134
 misc               = BFBFBF
+
+[gruvbox]
+text               = fbf1c7
+subtext            = d5c4a1
+sidebar-text       = 32302f
+main               = 292828
+sidebar            = 689d6a
+player             = 292828
+card               = 3c3836
+shadow             = 202020
+selected-row       = d5c4a1
+button             = fb4934
+button-active      = cc241d
+button-disabled    = bdae93
+tab-active         = fb4934
+notification       = 8ec07c
+notification-error = d79921
+misc               = BFBFBF
