--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -19,10 +19,13 @@ expose_apis           = 1
 disable_upgrade_check = 1
 
 [AdditionalOptions]
-extensions  = dribbblish.js
-custom_apps = 
+extensions     = dribbblish.js|Dribbblish.js
+custom_apps    = 
+sidebar_config = 1
+home_config    = 1
 
 ; DO NOT CHANGE!
 [Backup]
 version = 1.1.56.595.g2d2da0de
+with    = 
 
