--- a/spicetify/Themes/Dribbblish/color.ini
+++ b/spicetify/Themes/Dribbblish/color.ini
@@ -178,3 +178,21 @@ tab-active         = fb4934
 notification       = 8ec07c
 notification-error = d79921
 misc               = BFBFBF
+
+[custom]
+text               = 8db7cd
+subtext            = 8db7cd
+sidebar-text       = def3ff
+main               = 161421
+sidebar            = ba60c0
+player             = 161421
+card               = 262339
+shadow             = 161421
+selected-row       = 9670be
+button             = e253a2
+button-active      = e253a2
+button-disabled    = 6a89b8
+tab-active         = 6a89b8
+notification       = 6b88e7
+notification-error = 5b73c1
+misc               = def3ff
