--- a/spicetify/config-xpui.ini
+++ b/spicetify/config-xpui.ini
@@ -2,7 +2,7 @@
 
 [Setting]
 spotify_path            = /opt/spotify
-color_scheme            = nord-dark
+color_scheme            = custom
 spotify_launch_flags    = 
 prefs_path              = /home/wimbl/.config/spotify/prefs
 current_theme           = Dribbblish
@@ -19,7 +19,7 @@ expose_apis           = 1
 disable_upgrade_check = 1
 
 [AdditionalOptions]
-extensions     = dribbblish.js|Dribbblish.js
+extensions     = dribbblish.js
 custom_apps    = 
 sidebar_config = 1
 home_config    = 1
