--- a/i3/config
+++ b/i3/config
@@ -16,9 +16,22 @@ set $up k
 
 set $mod Mod4
 
+set_from_resource $background background #161421
+set_from_resource $foreground foreground #8db7cd
+set_from_resource $color3 color3 #e253a2
+set_from_resource $color4 color4 #ba60c0
+set_from_resource $color5 color5 #9670be
+set_from_resource $color11 color11 #e23494
+set_from_resource $color12 color12 #a647ac
+
+client.focused          $color4 $color5 $foreground $color5
+client.focused_inactive $color4 $background $foreground $background
+client.unfocused        $color4 $background $foreground $background
+client.urgent           $color12 $color12 $foreground $color12
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8, FontAwesome 8
+font monospace 8, FontAwesome 8
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -117,8 +130,8 @@ set $ws1 "1:"
 set $ws2 "2:"
 set $ws3 "3:"
 set $ws4 "4:"
-set $ws5 "5:"
-set $ws6 "6:"
+set $ws5 "5:"
+set $ws6 "6:"
 set $ws7 "7"
 set $ws8 "8"
 set $ws9 "9"
@@ -136,8 +149,8 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
-bindsym $mod+m workspace $ws6
-bindsym $mod+numbersign workspace $ws5
+bindsym $mod+m workspace $ws5
+bindsym $mod+numbersign workspace $ws6
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -151,8 +164,8 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
-bindsym $mod+Shift+numbersign move container to workspace $ws5
-bindsym $mod+Shift+m move container to workspace $ws6
+bindsym $mod+Shift+m move container to workspace $ws5
+bindsym $mod+Shift+numbersign move container to workspace $ws6
 
 # monitor management
 bindsym $mod+greater move workspace to output right
@@ -177,10 +190,9 @@ bindsym $mod+Control+$right resize grow width 2 px or 2 ppt
 bindsym Print exec --no-startup-id ~/.config/i3/scripts/screenshot.sh -s
 bindsym $mod+Print exec --no-startup-id ~/.config/i3/scripts/screenshot.sh
 
-gaps inner 10
-gaps outer 12
+gaps inner 15
 
-for_window [class=".*"] border pixel 0
+for_window [class=".*"] border pixel 3
 for_window [title="Calculator"] floating enable
 
 exec_always --no-startup-id feh --bg-scale /home/wimbl/.bg
