--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -165,10 +165,10 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-  "92:class_g   = 'Alacritty'",
+  #"92:class_g   = 'Alacritty'",
   #"85:class_g   = 'Polybar'",
   "100:class_g   = 'Polybar'",
-  "92:class_g   = 'Code'",
+  #"92:class_g   = 'Code'",
   "100:class_g  = 'firefox'",
   "100:class_g  = 'firefox' && argb"
 	
@@ -182,7 +182,7 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 10 
+corner-radius = 0
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
