good god i need to tidy this all up

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,36 +1,43 @@
 window:
   padding:
-    x: 6 
-    y: 6 
+    x: 6
+    y: 6
 
 colors:
   # Default colors
   primary:
-    background: '0x161421'
-    foreground: '0x8db7cd'
+    background: '0x1E1D2F'
+    foreground: '0xD9E0EE'
+
+  cursor:
+    text: '0x1E1D2F'
+    cursor: '0xF5E0DC'
 
   # Normal colors
   normal:
-    black:   '0x161421'
-    red:     '0x6b88e7'
-    green:   '0x7774f1'
-    yellow:  '0xe253a2'
-    blue:    '0xba60c0'
-    magenta: '0x9670be'
-    cyan:    '0x6a89b8'
-    white:   '0xdef3ff'
+    black: '0x6E6C7E'
+    red: '0xF28FAD'
+    green: '0xABE9B3'
+    yellow: '0xFAE3B0'
+    blue: '0x96CDFB'
+    magenta: '0xF5C2E7'
+    cyan: '0x89DCEB'
+    white: '0xD9E0EE'
 
   # Bright colors
   bright:
-    black:   '0x7285a1'
-    red:     '0x5b73c1'
-    green:   '0x514fa4'
-    yellow:  '0xe23494'
-    blue:    '0xa647ac'
-    magenta: '0x834bbe'
-    cyan:    '0x4a6da1'
-    white:   '0xb8c9d3'
+    black: '0x988BA2'
+    red: '0xF28FAD'
+    green: '0xABE9B3'
+    yellow: '0xFAE3B0'
+    blue: '0x96CDFB'
+    magenta: '0xF5C2E7'
+    cyan: '0x89DCEB'
+    white: '0xD9E0EE'
 
+  indexed_colors:
+    - { index: 16, color: '0xF8BD96' }
+    - { index: 17, color: '0xF5E0DC' }
 
 font:
   normal:
@@ -50,3 +57,4 @@ font:
     style: Bold Italic
 
   size: 11
+theme: Catppuccin
