--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -2,3 +2,4 @@
 gtk-theme-name = Nordic-darker
 gtk-icon-theme-name = Tela-circle-dark
 gtk-decoration-layout = appmenu:close
+gtk-cursor-theme-name = phinger-cursors
