--- a/i3/config
+++ b/i3/config
@@ -61,6 +61,7 @@ floating_modifier $mod
 # start a terminal
 bindsym $mod+Return exec alacritty
 bindsym $mod+i exec firefox
+bindsym $mod+z exec code ~/documents/notes
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -127,13 +128,14 @@ bindsym $mod+a focus parent
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 
+set $ws0 "0:"
 set $ws1 "1:"
 set $ws2 "2:"
 set $ws3 "3:"
 set $ws4 "4:"
 set $ws5 "5:"
 set $ws6 "6:"
-set $ws7 "7"
+set $ws7 "7:"
 set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
@@ -150,8 +152,10 @@ bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
+bindsym $mod+grave workspace $ws0
 bindsym $mod+m workspace $ws5
 bindsym $mod+numbersign workspace $ws6
+bindsym $mod+n workspace $ws7
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace $ws1
@@ -165,8 +169,10 @@ bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
+bindsym $mod+Shift+grave move container to workspace $ws0
 bindsym $mod+Shift+m move container to workspace $ws5
 bindsym $mod+Shift+numbersign move container to workspace $ws6
+bindsym $mod+Shift+n move container to workspace $ws7
 
 # monitor management
 bindsym $mod+greater move workspace to output right
@@ -185,19 +191,23 @@ bindsym $mod+Control+$right resize grow width 2 px or 2 ppt
 
 # debug bindings
 # bindsym $mod+p exec --no-startup-id ~/.config/i3/scripts/refresh_polybar.sh
-bindsym $mod+semicolon exec --no-startup-id ~/.config/i3/scripts/test_dunst.sh
+# bindsym $mod+semicolon exec --no-startup-id ~/.config/i3/scripts/test_dunst.sh
 
 # printscreen screenshots!!!!!!!
 bindsym Print exec --no-startup-id ~/.config/i3/scripts/screenshot.sh -s
 bindsym $mod+Print exec --no-startup-id ~/.config/i3/scripts/screenshot.sh
 
-gaps inner 15
+gaps inner 6
+gaps outer 3
+smart_gaps on
+smart_borders on
 
-for_window [class=".*"] border pixel 3
+for_window [class=".*"] border pixel 2
 for_window [title="Calculator"] floating enable
 
 exec_always --no-startup-id feh --bg-scale /home/wimbl/.bg
 exec --no-startup-id picom
 exec --no-startup-id clipcatd
+exec --no-startup-id nm-applet
 exec --no-startup-id ~/.config/i3/scripts/start_dunst.sh
 exec --no-startup-id ~/.config/i3/scripts/start_polybar.sh
