--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,15 +1,27 @@
 #################################
+#          Animations           #
+#################################
+# requires https://github.com/jonaburg/picom
+# (These are also the default values)
+transition-length = 150
+transition-pow-x = 0.1
+transition-pow-y = 0.1
+transition-pow-w = 0.1
+transition-pow-h = 0.1
+size-transition = true
+
+#################################
 #             Corners           #
 #################################
 # requires: https://github.com/sdhand/compton
-corner-radius = 25.0;
-rounded-corners-exclude = [
-  "class_g = 'Polybar'",
-  "class_g = 'firefox'",
-];
-round-borders = 1;
-round-borders-exclude = [
-];
+# corner-radius = 12;
+# rounded-corners-exclude = [
+#   "class_g = 'Polybar'",
+#   "class_g = 'firefox'",
+# ];
+# round-borders = 1;
+# round-borders-exclude = [
+# ];
 
 # Specify a list of border width rules, in the format `PIXELS:PATTERN`, 
 # Note we don't make any guarantee about possible conflicts with the
@@ -95,8 +107,8 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
-fading = true;
+fading = true
+#fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -107,7 +119,7 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-#fade-delta = 10
+fade-delta = 5
 
 # Specify a list of conditions of windows that should not be faded.
 # don't need this, we disable fading for all normal windows with wintypes: {}
@@ -166,9 +178,9 @@ focus-exclude = [
 # opacity-rule = []
 opacity-rule = [
   #"92:class_g   = 'Alacritty'",
-  "90:class_g   = 'Alacritty'",
-  "75:class_g   = 'Dunst'",
-  "70:class_g   = 'Rofi'",
+  #"90:class_g   = 'Alacritty'",
+  #"75:class_g   = 'Dunst'",
+  #"70:class_g   = 'Rofi'",
   #"85:class_g   = 'Polybar'",
   #"100:class_g   = 'Polybar'",
   #"92:class_g   = 'Code'",
@@ -185,13 +197,13 @@ opacity-rule = [
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+# corner-radius = 0
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+# rounded-corners-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'"
+# ];
 
 
 #################################
