--- a/i3/config
+++ b/i3/config
@@ -197,9 +197,9 @@ bindsym $mod+Control+$right resize grow width 2 px or 2 ppt
 bindsym Print exec --no-startup-id ~/.config/i3/scripts/screenshot.sh -s
 bindsym $mod+Print exec --no-startup-id ~/.config/i3/scripts/screenshot.sh
 
-gaps inner 6
-gaps outer 3
-smart_gaps on
+# gaps inner 6
+# gaps outer 3
+# smart_gaps on
 smart_borders on
 
 for_window [class=".*"] border pixel 2
