--- a/polybar/config
+++ b/polybar/config
@@ -26,6 +26,11 @@ foreground-alt = ${xrdb:color7}
 primary = ${xrdb:color5}
 secondary = ${xrdb:color6}
 alert = ${xrdb:color2}
+blue = ${xrdb:color4}
+green = ${xrdb:color2}
+maguve = ${xrdb:color5}
+yellow = ${xrdb:color3}
+pink = ${xrdb:color6}
 
 [bar/base]
 monitor = ${env:MONITOR:}
@@ -117,27 +122,27 @@ label-separator = ~
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+format-prefix-foreground = ${colors.pink}
 label = %percentage:2%%
+label-foreground = ${colors.pink}
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
+format-prefix-foreground = ${colors.yellow}
 label = %percentage_used%%
+label-foreground = ${colors.yellow}
 
 [module/eth]
 type = internal/network
 interface = enp42s0
 interval = 3.0
 
-format-connected-underline = #55aa55
 format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
+format-connected-prefix-foreground = ${colors.blue}
 label-connected = %local_ip%
+label-connected-foreground = ${colors.blue}
 
 format-disconnected =
 ;format-disconnected = <label-disconnected>
@@ -149,17 +154,19 @@ format-disconnected =
 type = internal/date
 interval = 5
 
-date =
-date-alt = " %Y-%m-%d"
+#date-alt =
 
-time = %H:%M
-time-alt = %H:%M:%S
+date = "%A %B %d, %Y"
+date-alt = "%x"
+
+time = %T
+time-alt = %T
 
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = ${colors.primary}
+format-prefix-foreground = ${colors.green}
 
-label = %date% %time%
+label =  " %date%, %time%"
+label-foreground = ${colors.green}
 
 [module/alsa]
 type = internal/alsa
