--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -41,20 +41,24 @@ colors:
 
 font:
   normal:
-    family: Fantasque
+    family: Fantasque Sans Mono
     style: Regular
 
   bold:
-    family: Fantasque
+    family: Fantasque Sans Mono
     style: Bold
 
   italic:
-    family: Fantasque
+    family: Fantasque Sans Mono
     style: Italic
 
   bold_italic:
-    family: Fantasque
+    family: Fantasque Sans Mono
     style: Bold Italic
 
   size: 11
 theme: Catppuccin
+
+key_bindings:
+  - { key: Back, mods: Control, chars: "\u0017" }
+
