--- a/i3/config
+++ b/i3/config
@@ -60,8 +60,8 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec alacritty
-bindsym $mod+i exec firefox
-bindsym $mod+z exec code ~/documents/notes
+bindsym $mod+i exec --no-startup-id firefox
+bindsym $mod+z exec --no-startup-id code ~/documents/notes
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -69,11 +69,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-bindsym $mod+d exec rofi -show drun -modi drun
-bindsym $mod+Escape exec rofi -show pm -modi pm:~/.config/rofi/power-menu
-# There also is i3-dmenu-desktop which only displays applications shipping a
-# .desktop file. It is a wrapper around dmenu, so you need that installed.
-# bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+d exec --no-startup-id rofi -show drun -modi drun
+bindsym $mod+Escape exec --no-startup-id rofi -show pm -modi pm:~/.config/rofi/power-menu
 
 # change focus
 bindsym $mod+$left focus left
