--- a/i3/config
+++ b/i3/config
@@ -50,10 +50,10 @@ exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id polybar-msg action "#pipewire.hook.2"
+bindsym XF86AudioLowerVolume exec --no-startup-id polybar-msg action "#pipewire.hook.3"
+bindsym XF86AudioMute exec --no-startup-id polybar-msg action "#pipewire.hook.1"
+bindsym XF86AudioPlay exec --no-startup-id playerctl play-pause
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -202,9 +202,11 @@ smart_borders on
 for_window [class=".*"] border pixel 2
 for_window [title="Calculator"] floating enable
 
-exec_always --no-startup-id feh --bg-scale /home/wimbl/.bg
+exec_always --no-startup-id feh --bg-scale ~/.bg
 exec --no-startup-id picom
 exec --no-startup-id clipcatd
 exec --no-startup-id nm-applet
 exec --no-startup-id ~/.config/i3/scripts/start_dunst.sh
-exec --no-startup-id ~/.config/i3/scripts/start_polybar.sh
+exec_always --no-startup-id ~/.config/i3/scripts/start_polybar.sh
+exec_always --no-startup-id autorandr --change
+
