--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name = Catppuccin-Mocha
+gtk-theme-name = Catppuccin-Mocha-Standard-Mauve-Dark
 gtk-icon-theme-name = Tela-circle-dark
 gtk-decoration-layout = appmenu:close
 gtk-cursor-theme-name = phinger-cursors
