--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -61,4 +61,5 @@ theme: Catppuccin
 
 key_bindings:
   - { key: Back, mods: Control, chars: "\u0017" }
+  - { key: Return, mods: Control|Shift, action: SpawnNewInstance }
 
