--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name = Catppuccin-Mocha-Standard-Mauve-dark
+gtk-theme-name = catppuccin-mocha-mauve-standard+default
 gtk-icon-theme-name = Tela-circle-dark
 gtk-decoration-layout = appmenu:close
-gtk-cursor-theme-name = phinger-cursors
+gtk-cursor-theme-name = Catppuccin-Mocha-Dark-Cursors
