changed notes terminal to kitty

--- a/i3/config
+++ b/i3/config
@@ -64,7 +64,7 @@ floating_modifier $mod
 # bindsym $mod+Return exec alacritty
 bindsym $mod+Return exec kitty
 bindsym $mod+i exec --no-startup-id firefox
-bindsym $mod+z exec --no-startup-id alacritty --working-directory ~/notes -T notes -e nvim -c "Neorg index"
+bindsym $mod+z exec --no-startup-id kitty --working-directory ~/notes -T notes nvim -c "Neorg index"
 
 # kill focused window
 bindsym $mod+Shift+q kill
