--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -66,7 +66,7 @@ inherit = bar/base
 enable-ipc = true
 modules-left = i3
 modules-center = 
-modules-right = cpu memory battery pipewire
+modules-right = cpu memory pipewire date battery 
 
 [bar/bar1]
 inherit = bar/base
