--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -18,6 +18,16 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
+# NVIDI ENV
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+cursor {
+    no_hardware_cursors = true
+}
+
 
 ################
 ### MONITORS ###
@@ -27,6 +37,7 @@
 
 monitor=,preferred,auto,auto
 monitor = eDP-1, 1920x1080, auto, 1.2
+monitor = DP-3, 2560x1440@144, auto, 1.066667
 
 xwayland {
     force_zero_scaling = true
@@ -52,7 +63,7 @@ $browser = firefox
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = nm-applet & hyprpaper & dunst & waybar
+exec-once = nm-applet & hyprpaper & dunst
 # exec-once = waybar & hyprpaper & firefox
 
 
@@ -80,8 +91,8 @@ general {
     border_size = 1
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(b4befeee) rgba(cba6f7ee) 45deg
+    col.inactive_border = rgb(11111b)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false
@@ -208,26 +219,14 @@ bind = $mainMod, L, movefocus, r
 bind = $mainMod, K, movefocus, u
 bind = $mainMod, J, movefocus, d
 
-#$ws_console = 1
-#$ws_home = 2
-#$ws_net = 3
-#$ws_code = 4
-#$ws_trans = 5
-#$ws_notes = 6
-#$ws_music = 7
-#$ws_discord = 8 
-#$ws_8 = 9
-#$ws_9 = 10
-#$ws_10 = 11
-
-$ws_console = name:
-$ws_home =name:
-$ws_net = name:
-$ws_code = name:
-$ws_trans = name:
-$ws_notes = name:
-$ws_music = name:
-$ws_discord = name:
+$ws_console = 1
+$ws_home = 2
+$ws_net = 3
+$ws_code = 4
+$ws_trans = 5
+$ws_notes = 6
+$ws_music = 7
+$ws_discord = 8
 $ws_8 = 9
 $ws_9 = 10
 $ws_10 = 11
@@ -251,26 +250,42 @@ bind = $mainMod, numbersign, workspace, $ws_discord
 bind = $mainMod, n, workspace, $ws_notes
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, grave, movetoworkspace, $ws_console
-bind = $mainMod SHIFT, 1, movetoworkspace, $ws_home
-bind = $mainMod SHIFT, 2, movetoworkspace, $ws_net
-bind = $mainMod SHIFT, 3, movetoworkspace, $ws_code
-bind = $mainMod SHIFT, 4, movetoworkspace, $ws_trans
-bind = $mainMod SHIFT, 5, movetoworkspace, $ws_notes
-bind = $mainMod SHIFT, 6, movetoworkspace, $ws_music
-bind = $mainMod SHIFT, 7, movetoworkspace, $ws_discord
-bind = $mainMod SHIFT, 8, movetoworkspace, $ws_8
-bind = $mainMod SHIFT, 9, movetoworkspace, $ws_9
-bind = $mainMod SHIFT, 0, movetoworkspace, $ws_10
+bind = $mainMod SHIFT, grave, movetoworkspacesilent, $ws_console
+bind = $mainMod SHIFT, 1, movetoworkspacesilent, $ws_home
+bind = $mainMod SHIFT, 2, movetoworkspacesilent, $ws_net
+bind = $mainMod SHIFT, 3, movetoworkspacesilent, $ws_code
+bind = $mainMod SHIFT, 4, movetoworkspacesilent, $ws_trans
+bind = $mainMod SHIFT, 5, movetoworkspacesilent, $ws_notes
+bind = $mainMod SHIFT, 6, movetoworkspacesilent, $ws_music
+bind = $mainMod SHIFT, 7, movetoworkspacesilent, $ws_discord
+bind = $mainMod SHIFT, 8, movetoworkspacesilent, $ws_8
+bind = $mainMod SHIFT, 9, movetoworkspacesilent, $ws_9
+bind = $mainMod SHIFT, 0, movetoworkspacesilent, $ws_10
 
-bind = $mainMod SHIFT, M, movetoworkspace, $ws_music
-bind = $mainMod SHIFT, numbersign, movetoworkspace, $ws_discord
-bind = $mainMod SHIFT, n, movetoworkspace, $ws_notes
+bind = $mainMod SHIFT, M, movetoworkspacesilent, $ws_music
+bind = $mainMod SHIFT, numbersign, movetoworkspacesilent, $ws_discord
+bind = $mainMod SHIFT, n, movetoworkspacesilent, $ws_notes
+
+bind = $mainMod CTRL, grave, movetoworkspace, $ws_console
+bind = $mainMod CTRL, 1, movetoworkspace, $ws_home
+bind = $mainMod CTRL, 2, movetoworkspace, $ws_net
+bind = $mainMod CTRL, 3, movetoworkspace, $ws_code
+bind = $mainMod CTRL, 4, movetoworkspace, $ws_trans
+bind = $mainMod CTRL, 5, movetoworkspace, $ws_notes
+bind = $mainMod CTRL, 6, movetoworkspace, $ws_music
+bind = $mainMod CTRL, 7, movetoworkspace, $ws_discord
+bind = $mainMod CTRL, 8, movetoworkspace, $ws_8
+bind = $mainMod CTRL, 9, movetoworkspace, $ws_9
+bind = $mainMod CTRL, 0, movetoworkspace, $ws_10
+
+bind = $mainMod, F, fullscreen
+
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, J, movewindow, d
+bind = $mainMod SHIFT, K, movewindow, u
 
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
@@ -307,6 +322,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 workspace = w[1], gapsout:0, border: 0, rounding:0
+workspace = 2, default[true]
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
