hyprland config update

--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -3,6 +3,7 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, I, exec, $browser
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, Z, exec, $notes
 
 # Tiling Control
 bind = $mainMod SHIFT, Space, togglefloating,
