--- a/hypr/hyprland/variables.conf
+++ b/hypr/hyprland/variables.conf
@@ -3,6 +3,7 @@ $terminal = kitty
 $fileManager = nautilus
 $menu = rofi -show drun -modi drun
 $browser = firefox
+$notes = kitty --working-directory ~/notes -T notes nvim -c "Neorg index"
 
 # Workspace IDs
 $ws_console = 1
