--- a/hypr/hyprland/keybinds.conf
+++ b/hypr/hyprland/keybinds.conf
@@ -5,6 +5,10 @@ bind = $mainMod, I, exec, $browser
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, Z, exec, $notes
 
+# Screenshot
+bind = ,Print, exec, hyprshot -m region --clipboard-only
+bind = $mainMod ,Print, exec, hyprshot -m output --clipboard-only 
+
 # Tiling Control
 bind = $mainMod SHIFT, Space, togglefloating,
 bind = $mainMod SHIFT, Q, killactive,
